[tool.poetry]
name = "regular-explanations"
version = "0.1.0"
description = ""
authors = ["danielreuter <dreuter14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
