[tool.poetry]
name = "regular-explanations"
version = "0.1.0"
description = ""
authors = ["danielreuter <dreuter14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
plotly = "^5.23.0"
ipython = "^8.26.0"
ipykernel = "^6.29.5"
plotly-express = "^0.4.1"
transformer-lens = "^2.4.0"
sae-lens = "^3.18.2"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"
pandas = "^2.2.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
